--- a/examples/fly_multiple_drones/CMakeLists.txt
+++ b/examples/fly_multiple_drones/CMakeLists.txt
@@ -5,24 +5,23 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(fly_multiple_drones)
 
-find_package(Threads REQUIRED)
-
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(fly_multiple_drones
     fly_multiple_drones.cpp
 )
+
+find_package(Threads REQUIRED)
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(fly_multiple_drones
     MAVSDK::mavsdk
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_mission_raw
     MAVSDK::mavsdk_action
-    ${CMAKE_THREAD_LIBS_INIT}
+    Threads::Threads
 )
+
+if(NOT MSVC)
+    add_compile_options(fly_multiple_drones PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(fly_multiple_drones PRIVATE -WX -W2)
+endif()
