--- a/examples/follow_me/CMakeLists.txt
+++ b/examples/follow_me/CMakeLists.txt
@@ -5,25 +5,24 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(follow_me)
 
-find_package(Threads REQUIRED)
-
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(follow_me
     follow_me.cpp
     fake_location_provider.cpp
 )
+
+find_package(MAVSDK REQUIRED)
+find_package(Threads REQUIRED)
 
 target_link_libraries(follow_me
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk_follow_me
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk
-    ${CMAKE_THREAD_LIBS_INIT}
+    Threads::Threads
 )
+
+if(NOT MSVC)
+    add_compile_options(follow_me PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(follow_me PRIVATE -WX -W2)
+endif()
