--- a/examples/manual_control/CMakeLists.txt
+++ b/examples/manual_control/CMakeLists.txt
@@ -5,29 +5,37 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(manual_control)
 
-if(MSVC)
-    add_definitions("-WX -W2")
-else()
-    add_definitions("-Wall -Wextra")
-endif()
+add_executable(manual_control
+    manual_control.cpp
+    joystick.cpp
+)
 
 find_package(MAVSDK REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(Threads REQUIRED)
 
-add_executable(manual_control
-    manual_control.cpp
-    joystick.cpp
-)
-if (NOT SDL2_LIBRARIES)
-    set(SDL2_LIBRARIES SDL2::SDL2)
+# Workaround for Ubuntu 18.04 where SDL2::SDL2 isn't provided yet.
+if (SDL2_FOUND AND NOT TARGET SDL2::SDL2)
+    add_library(SDL2::SDL2 UNKNOWN IMPORTED)
+    set_target_properties(SDL2::SDL2 PROPERTIES
+        IMPORTED_LINK_INTERFACE_LANGUAGES "CXX"
+        IMPORTED_LOCATION "${SDL2_LIBRARIES}"
+        INTERFACE_INCLUDE_DIRECTORIES "${SDL2_INCLUDE_DIRS}"
+    )
 endif()
+
 
 target_link_libraries(manual_control
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_manual_control
     MAVSDK::mavsdk
-    ${SDL2_LIBRARIES}
-    ${CMAKE_THREAD_LIBS_INIT}
+    SDL2::SDL2
+    Threads::Threads
 )
+
+if(NOT MSVC)
+    add_compile_options(manual_control PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(manual_control PRIVATE -WX -W2)
+endif()
