--- a/examples/offboard_velocity/CMakeLists.txt
+++ b/examples/offboard_velocity/CMakeLists.txt
@@ -3,27 +3,28 @@ cmake_minimum_required(VERSION 3.10.2)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(offboard)
+project(offboard_velocity)
 
-if(MINGW OR MSVC)
-    add_definitions("-D_USE_MATH_DEFINES") # For M_PI
-endif()
-
-if(MSVC)
-    add_definitions("-WX -W2")
-else()
-    add_definitions("-Wall -Wextra")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
-add_executable(offboard
+add_executable(offboard_velocity
     offboard_velocity.cpp
 )
 
-target_link_libraries(offboard
+find_package(MAVSDK REQUIRED)
+
+target_link_libraries(offboard_velocity
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk_offboard
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk
 )
+
+if(NOT MSVC)
+    add_compile_options(offboard_velocity PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(offboard_velocity PRIVATE -WX -W2)
+endif()
+
+if(MINGW OR MSVC)
+    # For M_PI
+    add_target_definitions(offboard_velocity "-D_USE_MATH_DEFINES")
+endif()
