--- a/examples/transition_vtol_fixed_wing/CMakeLists.txt
+++ b/examples/transition_vtol_fixed_wing/CMakeLists.txt
@@ -5,20 +5,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(transition_vtol_fixed_wing)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(transition_vtol_fixed_wing
     transition_vtol_fixed_wing.cpp
 )
+
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(transition_vtol_fixed_wing
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk
 )
+
+if(NOT MSVC)
+    add_compile_options(transition_vtol_fixed_wing PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(transition_vtol_fixed_wing PRIVATE -WX -W2)
+endif()
