--- a/examples/battery/CMakeLists.txt
+++ b/examples/battery/CMakeLists.txt
@@ -5,22 +5,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(battery)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra ")
-    # This warning is triggered by the MAVLink includes.
-    add_definitions("-Wno-address-of-packed-member")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(battery
     battery.cpp
 )
+
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(battery
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_mavlink_passthrough
     MAVSDK::mavsdk
 )
+
+if(NOT MSVC)
+    add_compile_options(battery PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(battery PRIVATE -WX -W2)
+endif()
