--- a/examples/camera_settings/CMakeLists.txt
+++ b/examples/camera_settings/CMakeLists.txt
@@ -5,20 +5,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(camera_settings)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(camera_settings
     camera_settings.cpp
 )
+
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(camera_settings
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_camera
     MAVSDK::mavsdk
 )
+
+if(NOT MSVC)
+    add_compile_options(camera_settings PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(camera_settings PRIVATE -WX -W2)
+endif()
