--- a/examples/gimbal_device_tester/CMakeLists.txt
+++ b/examples/gimbal_device_tester/CMakeLists.txt
@@ -5,23 +5,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(gimbal_device_tester)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra ")
-    # This warning is triggered by the MAVLink includes.
-    add_definitions("-Wno-address-of-packed-member")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-find_package(Threads REQUIRED)
-
 add_executable(gimbal_device_tester
     gimbal_device_tester.cpp
 )
 
+find_package(MAVSDK REQUIRED)
+find_package(Threads REQUIRED)
+
 target_link_libraries(gimbal_device_tester
     MAVSDK::mavsdk_mavlink_passthrough
     MAVSDK::mavsdk
-    ${CMAKE_THREAD_LIBS_INIT}
+    Threads::Threads
 )
+
+if(NOT MSVC)
+    add_compile_options(battery PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(battery PRIVATE -WX -W2)
+endif()
