--- a/examples/mavshell/CMakeLists.txt
+++ b/examples/mavshell/CMakeLists.txt
@@ -5,19 +5,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(mavshell)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(mavshell
     mavshell.cpp
 )
+
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(mavshell
     MAVSDK::mavsdk_shell
     MAVSDK::mavsdk
 )
+
+if(NOT MSVC)
+    add_compile_options(mavshell PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(mavshell PRIVATE -WX -W2)
+endif()
