--- a/examples/multiple_drones/CMakeLists.txt
+++ b/examples/multiple_drones/CMakeLists.txt
@@ -5,23 +5,22 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(multiple_drones)
 
-find_package(Threads REQUIRED)
-
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(multiple_drones
     multiple_drones.cpp
 )
+
+find_package(MAVSDK REQUIRED)
+find_package(Threads REQUIRED)
 
 target_link_libraries(multiple_drones
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk
-    ${CMAKE_THREAD_LIBS_INIT}
+    Threads::Threads
 )
+
+if(NOT MSVC)
+    add_compile_options(multiple_drones PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(multiple_drones PRIVATE -WX -W2)
+endif()
