--- a/examples/parachute/CMakeLists.txt
+++ b/examples/parachute/CMakeLists.txt
@@ -5,21 +5,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(parachute)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra ")
-    # This warning is triggered by the MAVLink includes.
-    add_definitions("-Wno-address-of-packed-member")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(parachute
     parachute.cpp
 )
+
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(parachute
     MAVSDK::mavsdk
     MAVSDK::mavsdk_mavlink_passthrough
 )
+
+if(NOT MSVC)
+    add_compile_options(parachute PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(parachute PRIVATE -WX -W2)
+endif()
