--- a/examples/takeoff_and_land/CMakeLists.txt
+++ b/examples/takeoff_and_land/CMakeLists.txt
@@ -5,20 +5,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(takeoff_and_land)
 
-if(NOT MSVC)
-    add_definitions("-Wall -Wextra")
-else()
-    add_definitions("-WX -W2")
-endif()
-
-find_package(MAVSDK REQUIRED)
-
 add_executable(takeoff_and_land
     takeoff_and_land.cpp
 )
+
+find_package(MAVSDK REQUIRED)
 
 target_link_libraries(takeoff_and_land
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk
 )
+
+if(NOT MSVC)
+    add_compile_options(takeoff_and_land PRIVATE -Wall -Wextra)
+else()
+    add_compile_options(takeoff_and_land PRIVATE -WX -W2)
+endif()
