Add ext param server & param request list

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(mission_raw)
 add_subdirectory(mocap)
 add_subdirectory(offboard)
 add_subdirectory(param)
+add_subdirectory(param_server)
 add_subdirectory(shell)
 add_subdirectory(telemetry)
 add_subdirectory(tracking_server)
