Rename to mission_raw_server

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -18,7 +18,7 @@ add_subdirectory(manual_control)
 add_subdirectory(mavlink_passthrough)
 add_subdirectory(mission)
 add_subdirectory(mission_raw)
-add_subdirectory(mission_server)
+add_subdirectory(mission_raw_server)
 add_subdirectory(mocap)
 add_subdirectory(offboard)
 add_subdirectory(param)
