--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(
 )
 
 add_subdirectory(action)
+add_subdirectory(action_server)
 add_subdirectory(calibration)
 add_subdirectory(camera)
 add_subdirectory(failure)
