--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,6 +28,6 @@ add_subdirectory(parachute)
 add_subdirectory(set_actuator)
 add_subdirectory(takeoff_and_land)
 add_subdirectory(terminate)
-add_subdirectory(transition_vtol_fixed_wing)
 add_subdirectory(transponder)
 add_subdirectory(tune)
+add_subdirectory(vtol_transition)
