--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,7 +23,7 @@ add_subdirectory(gimbal_device_tester)
 add_subdirectory(manual_control)
 add_subdirectory(mavshell)
 add_subdirectory(multiple_drones)
-add_subdirectory(offboard_velocity)
+add_subdirectory(offboard)
 add_subdirectory(parachute)
 add_subdirectory(set_actuator)
 add_subdirectory(takeoff_and_land)
