Spherical integration working

--- a/examples/mission_manager/rounded_corners/CMakeLists.txt
+++ b/examples/mission_manager/rounded_corners/CMakeLists.txt
@@ -13,6 +13,20 @@ target_link_libraries(rounded_corners_test
     rounded_corners
 )
 
+if (VISUALIZE)
+    FIND_PACKAGE(GLUT REQUIRED)
+    find_package(OpenGL REQUIRED)
+
+    target_link_libraries(rounded_corners_test
+        PRIVATE
+        GLUT::GLUT
+        OpenGL::OpenGL
+        GLU
+    )
+
+    target_compile_definitions(rounded_corners_test PRIVATE -DVISUALIZE=1)
+endif()
+
 enable_testing()
 add_test(NAME rounded_corners_test
     COMMAND rounded_corners_test
