--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(battery)
 add_subdirectory(calibrate)
 add_subdirectory(camera)
 add_subdirectory(camera_settings)
+add_subdirectory(camera_trigger_server)
 add_subdirectory(fly_mission)
 add_subdirectory(fly_multiple_drones)
 add_subdirectory(fly_qgc_mission)
