--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(action)
 add_subdirectory(action_server)
 add_subdirectory(calibration)
 add_subdirectory(camera)
+add_subdirectory(camera_trigger_server)
 add_subdirectory(failure)
 add_subdirectory(follow_me)
 add_subdirectory(ftp)
