core: add class to request messages
This adds the class RequestMessage which handles the tricky logic
around MAV_CMD_REQUEST_MESSAGE by dealing with the command ack as
well as a timeout in case the message is lost on the way.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -34,8 +34,10 @@ add_library(mavsdk
     log.cpp
     cli_arg.cpp
     geometry.cpp
+    request_message.cpp
     timesync.cpp
 )
+
 
 target_link_libraries(mavsdk
     PRIVATE
