telemetry: GPS_GLOBAL_ORIGIN using RequestMessage
This uses the new RequestMessage helper class to request
GPS_GLOBAL_ORIGIN. This should take care of the case where PX4 nacks the
command when the estimator has not initialized yet. This case was
previoulsy not captured by the logic in the plugin.

--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -63,6 +63,7 @@ add_executable(integration_tests_runner
     system_multi_components.cpp
     statustext.cpp
     telemetry_async.cpp
+    telemetry_gps_origin.cpp
     telemetry_health.cpp
     telemetry_modes.cpp
     telemetry_sync.cpp
