--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -548,6 +548,7 @@ jobs:
     strategy:
       matrix:
         px4_version: [v1.9, v1.10]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
         with:
@@ -562,6 +563,7 @@ jobs:
     strategy:
       matrix:
         px4_version: [v1.11, v1.12]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
         with:
