--- a/src/mavsdk_server/cmake/MacOSXFrameworkInfo.plist.in
+++ b/src/mavsdk_server/cmake/MacOSXFrameworkInfo.plist.in
@@ -17,7 +17,7 @@
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>CFBundleShortVersionString</key>
-    <string>${VERSION_STR}</string>
+    <string>${MAVSDK_VERSION_STRING}</string>
     <key>DTSDKName</key>
     <string>iphoneos10.0</string>
     <key>MinimumOSVersion</key>
