Trying to get linking to atomic under control
This seems to work but this is still a mystery to me.

--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -81,6 +81,7 @@ set_target_properties(integration_tests_runner
 )
 
 target_link_libraries(integration_tests_runner
+    PRIVATE
     mavsdk
     gtest
     gtest_main
