--- a/src/mavsdk_server/test/CMakeLists.txt
+++ b/src/mavsdk_server/test/CMakeLists.txt
@@ -18,8 +18,8 @@ target_include_directories(unit_tests_mavsdk_server
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../src
     ${CMAKE_CURRENT_SOURCE_DIR}/../src/plugins
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/plugins
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../mavsdk/
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../mavsdk/plugins
 )
 
 target_include_directories(unit_tests_mavsdk_server
