core: fix install directory

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -102,7 +102,7 @@ install(FILES
     include/mavsdk/log_callback.h
     include/mavsdk/plugin_base.h
     include/mavsdk/geometry.h
-    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mavsdk"
 )
 
 list(APPEND UNIT_TEST_SOURCES
