ftp: move crc32 files to core
That way we can re-use it in the component information server plugin.

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(mavsdk
     connection.cpp
     connection_result.cpp
     curl_wrapper.cpp
+    crc32.cpp
     system.cpp
     system_impl.cpp
     fs.cpp
