--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -589,3 +589,7 @@ jobs:
           submodules: recursive
       - name: test
         run: PX4_VERSION=${{ matrix.px4_version }} tools/run-sitl-tests.sh /home/user/Firmware
+        timeout-minutes: 45
+      - name: look at core files
+        if: failure()
+        run: gdb /home/user/Firmware/build/px4_sitl_default/bin/px4 px4.core -ex "thread apply all bt" -ex "quit"
