--- a/src/mavsdk/plugins/CMakeLists.txt
+++ b/src/mavsdk/plugins/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(action)
 add_subdirectory(action_server)
 add_subdirectory(calibration)
 add_subdirectory(camera)
+add_subdirectory(camera_server)
 add_subdirectory(failure)
 add_subdirectory(follow_me)
 add_subdirectory(ftp)
