--- a/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
+++ b/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
@@ -6,7 +6,8 @@ target_sources(mavsdk
 
 target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include/mavsdk>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../core/>
+    $<INSTALL_INTERFACE:include>
     )
 
 install(FILES
