--- a/src/mavsdk/plugins/mission_raw_server/CMakeLists.txt
+++ b/src/mavsdk/plugins/mission_raw_server/CMakeLists.txt
@@ -5,7 +5,7 @@ target_sources(mavsdk
 )
 target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include/mavsdk>
+    $<INSTALL_INTERFACE:include>
     )
 
 install(FILES
