1. added 45 minutes timeout for APM SITL github action 2. removed blocking echo statement from start_sitl_px4.sh

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -654,3 +654,4 @@ jobs:
           submodules: recursive
       - name: test
         run: APM_VERSION=${{ matrix.apm_version }} tools/run-sitl-tests.sh /home/user/ArduPilot
+        timeout-minutes: 45
